--- a/GymTrainerTelegramBot/GymTrainerTelegramBot.csproj
+++ b/GymTrainerTelegramBot/GymTrainerTelegramBot.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.8" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Telegram.Bot" Version="21.11.0" />
   </ItemGroup>
