--- a/GymTrainerTelegramBot/GymTrainerTelegramBot.csproj
+++ b/GymTrainerTelegramBot/GymTrainerTelegramBot.csproj
@@ -10,7 +10,8 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.8" />
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0" />
     <PackageReference Include="Telegram.Bot" Version="21.11.0" />
   </ItemGroup>
 
